# message-pass-comparison

./: .gitignore  CMakeLists.txt  README.md
client-server/: BigMessageTest.py  CMakeLists.txt  ManyMessagesTest.py  Tests.py
client-server/client/: CMakeLists.txt  Client.cpp  Client.h  ClientsManager.cpp  ClientsManager.h  Connection.cpp  Connection.h  main.cpp
client-server/server/: CMakeLists.txt  Connection.cpp  Connection.h  ConnectionManager.cpp  ConnectionManager.h  IConnection.h  IEpollWrapper.h  ServerConnection.cpp  ServerConnection.h  Signal.cpp  Signal.h  main.cpp
peer2peer/: CMakeLists.txt  Connection.cpp  Connection.h  Peer.cpp  Peer.h  TestBigMessage.py  TestManyMessages.py  main.cpp
